Update footer links and betterify contrast a bit (resolves #35)

--- a/css/main.css
+++ b/css/main.css
@@ -375,11 +375,8 @@ a {
   font-size: 14px;
   padding: 10px;
   border-top: 1px solid rgba(255, 0, 0, 0.2);
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.7);
 }
 .footer .link {
-  color: #a77;
-}
-.footer .link:hover {
   color: #faa;
 }
